--- a/config.toml
+++ b/config.toml
@@ -9,11 +9,11 @@ title = "Alejandro Morales"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "/"
+baseurl = "https://alemorales.info/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy; 2019"
+copyright = "2018 - {year}"
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = "UA-47903329-2"
