--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -31,10 +31,10 @@
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-[[main]]
-  name = "CV"
-  url = "files/cv.pdf"
-  parent = "output"
+#[[main]]
+#  name = "CV"
+#  url = "files/cv.pdf"
+#  parent = "output"
 
 [[main]]
   name = "External links"
